kubernetes/apps/talos1018/observability/grafana/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: sh-grafana
    gethomepage.dev/name: Grafana
    gethomepage.dev/app: grafana
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "grafana.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
